--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-(C) 2015-08-12 Highlight row for warnings
-(C) 2015-08-12 Search and Filter Functions
-(D) 2015-08-12 Insert existing data
+(A) 2015-08-12 Highlight row for warnings
+(B) 2015-08-12 Search and Filter Functions
+(C) 2015-08-12 Insert existing data
